src/components/experience/experience.scss
.container-experience {
    position: relative;
    width: 70%;
    margin: auto;
    z-index: 5;
    display: flex;
    flex-direction: column;
    // padding: 30px 40px;
    border-radius: 12px;
    margin-top: 82px;

    h2 {
        margin-bottom: 24px;
    }

    .content-experience {
        display: flex;
        gap: 8%;
        justify-content: center;

        .logos {
            display: grid;
            flex-direction: column;
            grid-template-columns: 1fr 1fr 1fr;
            gap: 7%;
            padding: 24px;
            font-size: 18px;

            .item-list {
                display: flex;
                flex-direction: column;
                align-items: center;
                gap: 12px;

                .image-list {
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    background-color: var(--color-secondary);
                    border-radius: 50%;
                    width: 120px;
                    height: 120px;
                    img {
                        width: 75px;
                        height: 75px;
                    }
                }
            }
        }

        .list-experience {
            display: flex;
            flex-direction: column;
            justify-content: center;
            width: 50%;
            gap: 30px;
            .item-experience {
                display: flex;
                font-size: 20px;
                background-image: linear-gradient(
                    90deg,
                    rgba(124, 101, 200, 0.385),
                    rgba(90, 51, 127, 0.119),
                    rgba(80, 40, 88, 0.1)
                );
                border-radius: 12px;
                padding: 15px;
                font: var(--font-roboto);

                img {
                    width: 50px;
                    height: 50px;
                    margin-right: 8px;
                }

                display: flex;
                flex-direction: row;
            }
        }
    }
}

@media screen and (max-width: 830px) {
    .container-experience {
        width: 100%;
        padding: 8px;

        .content-experience {
            flex-direction: column;

            .logos {
                grid-template-columns: 1fr 1fr;
                gap: 15px;
            }

            .list-experience {
                width: 100%;
                gap: 6px;

                .item-experience {
                    // background-image: linear-gradient(
                    //     90deg,
                    //     rgba(90, 51, 127, 0.119),
                    //     rgba(124, 101, 200, 0.385),
                    //      rgba(80, 40, 88, 0.1)
                    // );
                }
            }
        }
    }
}

